--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -7,7 +7,7 @@ jobs:
       - name: Get Code
         uses: actions/checkout@v4
       - name: Install NodeJS
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: 18
       - name: Install dependencies
@@ -15,12 +15,13 @@ jobs:
       - name: Run Tests
         run: npm test
   deploy:
+    needs: test
     runs-on: ubuntu-latest
     steps:
       - name: Get Code
         uses: actions/checkout@v4
       - name: Install NodeJS
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: 18
       - name: Install dependencies
